--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-900">
             <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
                 <a href="#" class="flex items-center">
-                    <img src="./images/mlrs-logo.jpg" class="h-6 mr-3 sm:h-9" alt="MLRS Logo" />
+                    <img src="./images/mlrs-logo.png" class="h-6 mr-3 sm:h-9" alt="MLRS Logo" />
                 </a>
                 <div class="flex items-center lg:order-2">
                     
