--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-900">
             <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
                 <a href="#" class="flex items-center">
-                    <img src="./images/mlrs-logo.png" class="h-6 mr-3 sm:h-9" alt="MLRS Logo" />
+                    <img src="./images/mlrs-logo.pm" class="h-6 mr-3 sm:h-9" alt="MLRS Logo" />
                 </a>
                 <div class="flex items-center lg:order-2">
                     
@@ -391,7 +391,7 @@
             <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8">
             <div class="text-center">
                 <a href="#" class="flex items-center justify-center mb-5 text-2xl font-semibold text-gray-900 dark:text-white">
-                    <img src="./images/logo.svg" class="h-6 mr-3 sm:h-9" alt="MLRS Logo" />
+                    <img src="./mstile-150x150.png" class="h-6 mr-3 sm:h-9" alt="MLRS Logo" />
                     MLRS    
                 </a>
                 <span class="block text-sm text-center text-gray-500 dark:text-gray-400">© 2024-2025 MLRS™. All Rights Reserved. Built with <a href="https://mlrs.com" class="text-purple-600 hover:underline dark:text-purple-500">TeamWork</a> and <a href="https://mlrs.com" class="text-purple-600 hover:underline dark:text-purple-500">Cooperation</a>.
