--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
     <!-- Meta SEO -->
     <meta name="title" content="MLRS - Landing Page">
-    <meta name="description" content="Get started with a free and open-source landing page built with Tailwind CSS and the Flowbite component library.">
+    <meta name="description" content="A vibrant, mouthwatering bowl of MLRS Instant Oatmeal topped with fresh fruits, nuts, and a drizzle of honey.">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="author" content="MLRS">
 
     <!-- Social media share -->
-    <meta property="og:title" content="MLRS - Tailwind CSS Landing Page">
+    <meta property="og:title" content="MLRS - Landing Page">
     <meta property="og:site_name" content="MLRS">
     <meta property="og:url" content="https://mlrs.com">
-    <meta property="og:description" content="Get started with a free and open-source landing page for Tailwind CSS built with the Flowbite component library featuring dark mode, hero sections, pricing cards, and more.">
+    <meta property="og:description" content="A vibrant, mouthwatering bowl of MLRS Instant Oatmeal topped with fresh fruits, nuts, and a drizzle of honey.">
     <meta property="og:type" content="">
     <meta property="og:image" content="https://MLRS.s3.us-east-2.amazonaws.com/public/github/MLRS/og-image.png">
     <meta name="twitter:card" content="summary" />
